--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel-preset-env": "^1.6.0",
     "babel-register": "^6.26.0",
     "babelify": "^7.3.0",
+    "bcrypt": "^1.0.3",
     "bluebird": "^3.5.0",
     "body-parser": "^1.18.1",
     "browserify": "^14.4.0",
