--- a/nginx.conf
+++ b/nginx.conf
@@ -15,9 +15,9 @@ server {
   server_name movierec.blazingedge.io;
 
   ssl on;
-  ssl_certificate /etc/letsencrypt/live/movierec.blazingedge.io/fullchain.pem;
-  ssl_certificate_key /etc/letsencrypt/live/movierec.blazingedge.io/privkey.pem;
-  ssl_trusted_certificate /etc/letsencrypt/live/movierec.blazingedge.io/fullchain.pem;
+  ssl_certificate /etc/cert/movierec.blazingedge.io-full;
+  ssl_certificate_key /etc/cert/movierec.blazingedge.io-key;
+  ssl_trusted_certificate /etc/cert/movierec.blazingedge.io-full;
   ssl_session_timeout 1d;
   ssl_session_cache shared:SSL:50m;
   ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
